deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hodr
  name: hodr
  labels:
    app: hodr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hodr
  template:
    metadata:
      labels:
        app: hodr
    spec:
      containers:
      - name: hodr-container
        image: niket50/hodr:77
        ports:
        - containerPort: 8080
